--- a/PresentationPrv/pom.xml
+++ b/PresentationPrv/pom.xml
@@ -9,11 +9,13 @@
     <name>PrvPresentation</name>
 
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <struts2.version>2.3.15.3</struts2.version>
+        <spring.version>3.2.3.RELEASE</spring.version>
     </properties>
 
     <dependencies>
-
+      <!-- Dépendances Struts -->
         <dependency>
             <groupId>org.apache.struts</groupId>
             <artifactId>struts2-core</artifactId>
@@ -66,12 +68,19 @@
             <scope>provided</scope>
         </dependency>
         
-                
+             <!-- Dépendance du modole PRV -->   
         <dependency>
-        	<groupId>com.dev.uva.prv</groupId>
+        	<groupId>com.dev.uva.prv.modele</groupId>
     		<artifactId>ModelePrv</artifactId>
     		<version>0.1.0.BUILD-SNAPSHOT</version>
         </dependency>
+        
+        <!-- Dépendance Spring -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 <dependency>
   <groupId>taglibs</groupId>
