--- a/PresentationPrv/src/main/webapp/WEB-INF/web.xml
+++ b/PresentationPrv/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,16 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
   <display-name>Struts Blank</display-name>
 
+     <!--  contexte d'applications Spring à charger -->
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath*:META-INF/spring/applicationContext.xml</param-value>
+	</context-param>
+    <!-- Listener Spring de chargment de contexte-->
+  <listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  <!-- Filtre classe intercepteur de Struts2 -->
   <filter>
     <filter-name>struts2</filter-name>
     <filter-class>
