--- a/PresentationPrv/src/main/webapp/WEB-INF/web.xml
+++ b/PresentationPrv/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,22 @@
          xmlns="http://java.sun.com/xml/ns/j2ee" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-  <display-name>Struts Blank</display-name>
+  <display-name>PRV</display-name>
 
+
+
+    <!-- Include this if you are using Hibernate -->
+    <filter>
+        <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+        <filter-class>
+            org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter
+        </filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
      <!--  contexte d'applications Spring à charger -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
@@ -30,6 +44,16 @@
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
+  
+  <listener>
+    <listener-class>
+        org.apache.struts2.tiles.StrutsTilesListener
+    </listener-class>
+</listener>
+<context-param>
+    <param-name>tilesDefinitions</param-name>
+    <param-value>/WEB-INF/tiles.xml</param-value>
+</context-param>
   
   <!-- L'intercepteur du menu Struts -->
     <!--listener>
